2014-02-27  Kaz Kylheku  <kaz@kylheku.com>

	* txr.1: Improved documentation for the dwim operator.

2014-02-26  Kaz Kylheku  <kaz@kylheku.com>

	Version 82

	* txr.c (version): Bumped.

	* txr.1: Bumped version, set date, improved the documentation
	for the copy function and copy-list, and fixed the
	an instance where the delay macro was called a function.

	* configure (txr_ver): Bumped.

	* RELNOTES, txr.vim: Updated.

2014-02-27  Kaz Kylheku  <kaz@kylheku.com>

	* txr.1: Typos, grammar and formatting fixes mailed in
	by Roman Mishin.

2014-02-27  Kaz Kylheku  <kaz@kylheku.com>

	* parser.l: Regression: valid floating-point literals tagged
	as having trailing junk. The fix is to put the junk-matching rule after
	the valid rules.

2014-02-27  Kaz Kylheku  <kaz@kylheku.com>

	* lib.c (copy): New function.

	* lib.h (copy): Declared.

	* eval.c (eval_init): Registered copy function as intrinsic.

	* txr.1: Added missing documentation for length. Documented copy.

2014-02-27  Kaz Kylheku  <kaz@kylheku.com>

	* genvim.txr: Updated with regard to how operators are registered in
	in eval_init. Also, scans reg_mac registrations now.

	* txr.vim: Refreshed. The previously missed "delay" operator is now
	listed, thanks to reg_mac.

2014-02-27  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (maybe_progn): New function.
	(expand_macrolet, expand_symacrolet): Use maybe_progn
	to eliminate unnecessary progn wrapping.

2014-02-26  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (gun_s): New global variable.
	(me_gun): New static function.
	(eval_init): New gun symbol interened, me_gun registered
	as intrinsic macro.

	* txr.1: Documented gun.

2014-02-26  Kaz Kylheku  <kaz@kylheku.com>

	Converting expander special case code transformations into
	formal macros that are in the top_mb table, make their symbols
	fboundp and can be expanded with macroexpand.

	* eval.c (mefun_t): New typedef name.
	(expand_macro): If the expander is a cobj, then pull out the C function