@@ -18,6 +18,8 @@ void eval_init(void)
 @  (or)
   reg_@/op|mac/(@{txl-sym}_s,@(skip)
 @  (or)
+  reg_mac(intern(lit("@{txl-sym}"),@(skip)
+@  (or)
   reg_fun(intern(lit("@{txl-sym}"),@(skip)
 @  (or)
   reg_fun(@{txl-sym}_s,@(skip)
